--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,11 @@
     <title>CSV Generator</title>
   </head>
   <body>
-    <div>
-      <form action="" method="" id="form">
+      <form action="/csv" method="POST" enctype="text/plain">
         <label for="data">Enter data here</label>
-        <input type="text" required>
+        <textArea name="data" id="data" value="text"></textArea>
+        <input type="submit">
       </form>
-    </div>
     <div class="csvDownload">Download Here</div>
     <script src="app.js"></script>
   </body>
