made link work to download csv files

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         <textArea name="data" id="data" value="text"></textArea>
         <input type="submit">
       </form>
-    <div class="csvDownload">Download Here</div>
+    <div class="csvDownload"><a href="/generated.csv" download>DOWNLOAD HERE!!</a></div>
     <script src="app.js"></script>
   </body>
 </html>
